--- a/catalog.html
+++ b/catalog.html
@@ -8,10 +8,10 @@
 
   <body>
     <header class="page-header">
-      <a href="index.html">
-        <img class="logo" src="images/logo.svg" wight="139" height="70" alt="Логотип city of Sedona.">
-      </a>
       <nav class="navigation">
+        <a href="index.html">
+          <img class="logo" src="images/logo.svg" wight="139" height="70" alt="Логотип city of Sedona.">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">
@@ -29,7 +29,7 @@
             </a>
           </li>
         </ul>
-        <ul class="navigation-user">
+        <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
@@ -162,7 +162,7 @@
               <span class="hotel-card-price">От 4000 ₽</span>
               <a class="button button--hotel-card" href="#">подробнее</a>
               <a class="button button--hotel-like" href="#">В избранное</a>
-              <!-- Рейтинг в звездах --> <!--div внутри которого img со звездами, в один ряд 4 звезды-->
+              <!-- Рейтинг в звездах --><!--div внутри которого img со звездами, в один ряд 4 звезды-->
               <span class="hotel-card-rating">Рейтинг: 8,5</span>
             </li>
             <li class="hotel-card">
@@ -237,9 +237,7 @@
           </li>
         </ul>
       </section>
-    </main>
 
-    <footer class="page-footer">
       <section class="subscription subscription--no-image">
         <h2 class="subscription-title">
           Подпишитесь на рассылку
@@ -254,7 +252,9 @@
           </button>
         </form>
       </section>
+    </main>
 
+    <footer class="page-footer">      
       <section class="footer-social">
         <h2 class="visually-hidden">
           Давайте дружить
