--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <body>
     <header class="page-header">
-      <a href="#">
-        <img class="logo" src="images/logo.svg" wight="139" height="70" alt="Логотип city of Sedona.">
-      </a>
       <nav class="navigation">
+        <a href="#">
+          <img class="logo" src="images/logo.svg" wight="139" height="70" alt="Логотип city of Sedona.">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
@@ -29,7 +29,7 @@
             </a>
           </li>
         </ul>
-        <ul class="navigation-user">
+        <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">
@@ -53,199 +53,205 @@
       </nav>
     </header>
 
-    <main class="main-index">
-      <section class="promo">
-        <h1 class="visually-hidden">
-          Добро пожаловать в Седону
-        </h1>
-        <img class="promo-image" src="images/welcome.svg" wight="458" height="352" alt="Приветствие Седоны.">
-        <p class="promo-text">
-          Седона - небольшой городок в Аризоне, заслуживающий большего!
-        </p>
-      </section>
-
-      <section class="advantages">
-        <h2 class="advantages-title">
-          Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
-        </h2>
-        <div class="advantages-block">
-          <div class="advantages-block-text">
-            <h3 class="advantages-block-title">
-              Настоящий городок
-            </h3>
-            <p class="advantages-block-number">
-              - №1 -
-            </p>
-            <p class="advantages-block-description">
-              Седона не аттракцион для туристов, там течет своя жизнь
-            </p>
+    <main class="main-container main-index">
+      <div class="page-container">
+        <section class="promo">
+          <h1 class="visually-hidden">
+            Добро пожаловать в Седону
+          </h1>
+          <img class="promo-image" src="images/welcome.svg" wight="458" height="352" alt="Приветствие Седоны.">
+          <p class="promo-text">
+            Седона - небольшой городок в Аризоне, заслуживающий большего!
+          </p>
+        </section>
+  
+        <section class="advantages">
+          <h2 class="advantages-title">
+            Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
+          </h2>
+          <div class="advantages-block">
+            <div class="advantages-block-text">
+              <h3 class="advantages-block-title">
+                Настоящий<br>
+                городок
+              </h3>
+              <p class="advantages-block-number">
+                - №1 -
+              </p>
+              <p class="advantages-block-description">
+                Седона не аттракцион для туристов, там течет своя жизнь
+              </p>
+            </div>
+            <img class="advantages-block" src="images/city-view.jpg" wight="800" height="384" alt="Вид на город.">
           </div>
-          <img class="advantages-block" src="images/city-view.jpg" wight="800" height="384" alt="Вид на город.">
-        </div>
-
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">
-              Жилье
-            </h3>
-            <p class="advantage-description">
-              Рекомендуем пожить в настоящем мотеле, все как в кино!
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">
-              Еда
-            </h3>
-            <p class="advantage-description">
-              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">
-              Сувениры
-            </h3>
-            <p class="advantage-description">
-              Не только китайского, но и настоящего местного производства!
-            </p>
-          </li>
-        </ul>
-
-        <div class="advantages-block advantage-blok--reverse">
-          <img class="advantages-block" src="images/mountain-view.jpg" wight="800" height="384" alt="Вид на мост дьявола.">
-          <div class="advantages-block-text">
-            <h3 class="advantages-block-title">
-              Там есть мост дьявола
-            </h3>
-            <p class="advantages-block-number">
-              - №2 -
-            </p>
-            <p class="advantages-block-description">
-              Да, по нему можно пройти! Если вы осмелитесь, разумеется
-            </p>
+  
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-item-title">
+                Жилье
+              </h3>
+              <p class="advantages-description">
+                Рекомендуем пожить в настоящем мотеле, все как в кино!
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-item-title">
+                Еда
+              </h3>
+              <p class="advantages-description">
+                Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-item-title">
+                Сувениры
+              </h3>
+              <p class="advantages-description">
+                Не только китайского, но и настоящего местного производства!
+              </p>
+            </li>
+          </ul>
+  
+          <div class="advantages-block advantage-blok--reverse">
+            <img class="advantages-block" src="images/mountain-view.jpg" wight="800" height="384" alt="Вид на мост дьявола.">
+            <div class="advantages-block-text">
+              <h3 class="advantages-block-title">
+                Там есть<br>
+                мост дьявола
+              </h3>
+              <p class="advantages-block-number">
+                - №2 -
+              </p>
+              <p class="advantages-block-description">
+                Да, по нему можно пройти! Если вы осмелитесь, разумеется
+              </p>
+            </div>
           </div>
-        </div>
+  
+          <ul class="advantages-list advantages-list--features"> 
+            <li class="advantages-item">
+              <h3 class="advantages-item-title">
+                Небольшая площадь
+              </h3>
+              <p class="advantages-number">
+                - №3 -
+              </p>
+              <p class="advantages-description">
+                Все достопримечательности находятся очень близко
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-item-title">
+                Красивая дорога
+              </h3>
+              <p class="advantages-number">
+                - №4 -
+              </p>
+              <p class="advantages-description">
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-item-title">
+                Мало туристов
+              </h3>
+              <p class="advantages-number">
+                - №5 -
+              </p>
+              <p class="advantages-description">
+                Большинство едет в Гранд Каньон и толпится там
+              </p>
+            </li>
+          </ul>
+        </section>
+  
+        <section class="search">
+          <h2 class="visually-hidden">
+            Поиск гостиницы
+          </h2>
+          <span class="search-title">
+            Заинтересовались?
+          </span>
+          <p class="search-text">
+            Укажите предполагаемые даты поездки,
+  и мы покажем вам лучшие предложения гостиниц в Седоне
+          </p>
+          <a class="search-button" href="#">
+            Поиск гостиницы в Седоне
+          </a>
+        </section>
 
-        <ul class="advantages-list advantages-list--features"> 
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">
-              Небольшая площадь
-            </h3>
-            <p class="advantages-number">
-              - №3 -
-            </p>
-            <p class="advantages-description">
-              Все достопримечательности находятся очень близко
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">
-              Красивая дорога
-            </h3>
-            <p class="advantages-number">
-              - №4 -
-            </p>
-            <p class="advantages-description">
-              Ехать в Седону из Лас-Вегаса совсем не скучно!
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">
-              Мало туристов
-            </h3>
-            <p class="advantages-number">
-              - №5 -
-            </p>
-            <p class="advantages-description">
-              Большинство едет в Гранд Каньон и толпится там
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="search">
-        <h2 class="visually-hidden">
-          Поиск гостиницы
-        </h2>
-        <span class="search-title">
-          Заинтересовались?
-        </span>
-        <p class="search-text">
-          Укажите предполагаемые даты поездки,
-и мы покажем вам лучшие предложения гостиниц в Седоне
-        </p>
-        <a class="search-button" href="#">
-          Поиск гостиницы в Седоне
-        </a>
-      </section>
+        <section class="subscription">
+          <h2 class="subscription-title">
+            Подпишитесь на рассылку
+          </h2>
+          <p class="subscription-description">
+            Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
+          <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+            <input class="field" placeholder="Ваш e-mail" type="email" name="subscription-email" id="subscription-email" required>
+            <button class="button subscription-button" type="submit">
+              Подписаться
+            </button>
+          </form>
+        </section>
+      </div>
     </main>
 
     <footer class="page-footer">
-      <section class="subscription">
-        <h2 class="subscription-title">
-          Подпишитесь на рассылку
-        </h2>
-        <p class="subscription-description">
-          Только полезная информация и никакого спама, честное бойскаутское!
-        </p>
-        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
-          <input class="field" placeholder="Ваш e-mail" type="email" name="subscription-email" id="subscription-email" required>
-          <button class="button subscription-button" type="submit">
-            Подписаться
-          </button>
-        </form>
-      </section>
-
-      <section class="footer-social">
-        <h2 class="visually-hidden">
-          Давайте дружить
-        </h2>
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="footer-social-link" href="https://twitter.com/htmlacademy_ru">
-              <span class="visually-hidden">
-                Twitter
-              </span>
+      <div class="page-footer-container">       
+        <section class="footer-social">
+          <h2 class="visually-hidden">
+            Давайте дружить
+          </h2>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://twitter.com/htmlacademy_ru">
+                <span class="visually-hidden">
+                  Twitter
+                </span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://www.facebook.com/htmlacademy">
+                <span class="visually-hidden">
+                  Facebook
+                </span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="https://www.youtube.com/c/HTMLAcademyRUS">
+                <span class="visually-hidden">
+                  Youtube
+                </span>
+              </a>
+            </li>
+          </ul>
+        </section>
+  
+        <section class="contacts">
+          <h2 class="visually-hidden">
+            Контакты
+          </h2>
+          <address class="contact-address">
+            <a class="contacts-phone" href="tel:+78121212">
+              +7 (812) 812-12-12-12
             </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="footer-social-link" href="https://www.facebook.com/htmlacademy">
-              <span class="visually-hidden">
-                Facebook
-              </span>
+          </address> 
+        </section>
+  
+        <section class="htmlacademy">
+          <h2 class="visually-hidden">
+            Разработчик
+          </h2>
+          <p class="visually-hidden">
+            Сделано в htmlacademy
+          </p>
+            <a href="#" class="htmlacademy-link">
+              <img src="images/logo-htmlacademy.svg" wight="115" height="33" alt="Логотип htmlacademy.">
             </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="footer-social-link" href="https://www.youtube.com/c/HTMLAcademyRUS">
-              <span class="visually-hidden">
-                Youtube
-              </span>
-            </a>
-          </li>
-        </ul>
-      </section>
-
-      <section class="contacts">
-        <h2 class="visually-hidden">
-          Контакты
-        </h2>
-        <address class="contact-address">
-          <a class="contacts-phone" href="tel:+78121212">
-            +7 (812) 812-12-12-12
-          </a>
-        </address> 
-      </section>
-
-      <section class="htmlacademy">
-        <h2 class="visually-hidden">
-          Разработчик
-        </h2>
-        <p class="visually-hidden">
-          Сделано в htmlacademy
-        </p>
-          <a href="#" class="htmlacademy-link">
-            <img src="images/logo-htmlacademy.svg" wight="115" height="33" alt="Логотип htmlacademy.">
-          </a>
-      </section>
+        </section>
+      </div>
     </footer>
 
   </body>
