--- a/catalog.html
+++ b/catalog.html
@@ -46,7 +46,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link navigation-link--button" href="#">
-              ХОЧУ СЮДА!
+              Хочу сюда!
             </a>
           </li>
         </ul>
@@ -156,56 +156,72 @@
           <h2 class="visually-hidden">Результаты поиска</h2>
           <ul class="hotel-list">
             <li class="hotel-card">
-              <div class="hotel-card-all">
-                <a class="hotel-card-link" href="#">
-                  <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
-                  <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+              <a class="hotel-card-link" href="#">
+                <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" wight="299" height="206" alt="Отель Amara Resort & Spa.">
+              </a>
+              <a class="hotel-card-link-title" href="#">                
+                <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+              </a>
+              <div class="hotel-card-content">
+                <span class="hotel-group">Гостиница</span>
+                <span class="hotel-card-price">От 4000 ₽</span>
+                <a class="button button--hotel-card" href="#">подробнее</a>
+                <a class="button button--hotel-like" href="#">В избранное</a>
+              </div>
+              <div class="hotel-card-rating">
+                <a class="raiting-stars" href="#">
+                  <!--div внутри которого img со звездами, в один ряд 4 звезды-->
                 </a>
-                <div class="hotel-card-content">
-                  <span class="hotel-group">Гостиница</span>
-                  <span class="hotel-card-price">От 4000 ₽</span>
-                  <a class="button button--hotel-card" href="#">подробнее</a>
-                  <a class="button button--hotel-like" href="#">В избранное</a>
-                  <!-- Рейтинг в звездах --><!--div внутри которого img со звездами, в один ряд 4 звезды-->
-                  <span class="hotel-card-rating">Рейтинг: 8,5</span>
-                </div>                             
+                <span class="rating-number">Рейтинг: 8,5</span>                       
               </div>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" wight="299" height="206" alt="Отель Desert Quail Inn.">
+              </a>
+              <a class="hotel-card-link-title" href="#">
                 <h3 class="hotel-card-title">Desert Quail Inn</h3>
               </a>
-              <span class="hotel-group">Гостиница</span>
-              <span class="hotel-card-price">От 3000 ₽</span>
-              <a class="button button--hotel-card" href="#">подробнее</a>
-              <a class="button button--hotel-like" href="#">В избранное</a>
+              <div class="hotel-card-content">
+                <span class="hotel-group">Гостиница</span>
+                <span class="hotel-card-price">От 3000 ₽</span>
+                <a class="button button--hotel-card" href="#">подробнее</a>
+                <a class="button button--hotel-like" href="#">В избранное</a>
+              </div>
               <!-- Рейтинг в звездах -->
-              <span class="hotel-card-rating">Рейтинг: 8,9</span>
+              <span class="rating-number">Рейтинг: 8,9</span>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" wight="299" height="206" alt="Отель Villas at Poco Diablo.">
+              </a>
+              <a class="hotel-card-link-title" href="#">
                 <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               </a>
-              <span class="hotel-group">Гостиница</span>
-              <span class="hotel-card-price">От 2000 ₽</span>
-              <a class="button button--hotel-card" href="#">подробнее</a>
-              <a class="button button--hotel-like-in" href="#">В избранном</a>
+              <div class="hotel-card-content">
+                <span class="hotel-group">Гостиница</span>
+                <span class="hotel-card-price">От 2000 ₽</span>
+                <a class="button button--hotel-card" href="#">подробнее</a>
+                <a class="button button--hotel-like button--hotel-like-in" href="#">В избранном</a>
+              </div>
               <!-- Рейтинг в звездах -->
-              <span class="hotel-card-rating">Рейтинг: 9,2</span>
+              <span class="rating-number">Рейтинг: 9,2</span>
             </li>              
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" wight="299" height="206" alt="Отель GreenTree Inn.">
+              </a>
+              <a class="hotel-card-link-title" href="#">
                 <h3 class="hotel-card-title">GreenTree Inn</h3>
               </a>
-              <span class="hotel-group">Гостиница</span>
-              <span class="hotel-card-price">От 3000 ₽</span>
-              <a class="button button--hotel-card" href="#">подробнее</a>
-              <a class="button button--hotel-like" href="#">В избранное</a>
+              <div class="hotel-card-content">
+                <span class="hotel-group">Гостиница</span>
+                <span class="hotel-card-price">От 3000 ₽</span>
+                <a class="button button--hotel-card" href="#">подробнее</a>
+                <a class="button button--hotel-like" href="#">В избранное</a>
+              </div>
               <!-- Рейтинг в звездах -->
-              <span class="hotel-card-rating">Рейтинг: 9,2</span>
+              <span class="rating-number">Рейтинг: 9,2</span>
             </li>
           </ul>
   
