--- a/catalog.html
+++ b/catalog.html
@@ -32,8 +32,8 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <svg class="navigation-icon" aria-hidden="true" focusable="false" width="20" height="19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="m19.026 17.05-3.71-3.7c1.002-1.3 1.704-3 1.704-4.9 0-4.4-3.61-8-8.023-8C4.585.45.975 4.15.975 8.55c0 4.4 3.61 8 8.022 8 1.805 0 3.51-.6 4.914-1.7l3.71 3.7 1.405-1.5Zm-10.029-2.5c-3.309 0-6.017-2.7-6.017-6s2.708-6 6.017-6c3.31 0 6.017 2.7 6.017 6s-2.707 6-6.017 6Z" fill="#000"/>
+              <svg class="navigation-icon" aria-hidden="true" focusable="false" width="20" height="19" viewBox="0 0 20 19" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="m19.026 17.05-3.71-3.7c1.002-1.3 1.704-3 1.704-4.9 0-4.4-3.61-8-8.023-8C4.585.45.975 4.15.975 8.55c0 4.4 3.61 8 8.022 8 1.805 0 3.51-.6 4.914-1.7l3.71 3.7 1.405-1.5Zm-10.029-2.5c-3.309 0-6.017-2.7-6.017-6s2.708-6 6.017-6c3.31 0 6.017 2.7 6.017 6s-2.707 6-6.017 6Z"/>
               </svg>
               <span class="visually-hidden">
                 Поиск
@@ -41,13 +41,14 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link number-like" href="#">
-              <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M9.444 17c-.301 0-.602-.1-.802-.4-5.416-6.1-6.72-7.5-7.02-7.9C.92 7.8.519 6.6.519 5.4c0-3 2.406-5.4 5.515-5.4 1.304 0 2.507.5 3.51 1.3C10.547.5 11.851 0 13.054 0c3.008 0 5.516 2.4 5.516 5.4 0 1.3-.502 2.5-1.304 3.4l-7.02 7.9c-.2.2-.401.3-.802.3ZM3.427 7.5c.3.4 3.51 4 6.117 6.9l6.218-7c.501-.5.702-1.2.702-2 0-1.8-1.505-3.3-3.31-3.3-1.002 0-2.005.5-2.707 1.3-.301.3-.602.4-.903.4-.3 0-.602-.2-.802-.4-.702-.8-1.705-1.3-2.708-1.3-1.805 0-3.31 1.5-3.31 3.3-.1.9.302 1.6.703 2.1-.1 0-.1 0 0 0Z" fill="#000"/>
+            <a class="navigation-link" href="#">
+              <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" viewBox="0 0 19 17" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M9.444 17c-.301 0-.602-.1-.802-.4-5.416-6.1-6.72-7.5-7.02-7.9C.92 7.8.519 6.6.519 5.4c0-3 2.406-5.4 5.515-5.4 1.304 0 2.507.5 3.51 1.3C10.547.5 11.851 0 13.054 0c3.008 0 5.516 2.4 5.516 5.4 0 1.3-.502 2.5-1.304 3.4l-7.02 7.9c-.2.2-.401.3-.802.3ZM3.427 7.5c.3.4 3.51 4 6.117 6.9l6.218-7c.501-.5.702-1.2.702-2 0-1.8-1.505-3.3-3.31-3.3-1.002 0-2.005.5-2.707 1.3-.301.3-.602.4-.903.4-.3 0-.602-.2-.802-.4-.702-.8-1.705-1.3-2.708-1.3-1.805 0-3.31 1.5-3.31 3.3-.1.9.302 1.6.703 2.1-.1 0-.1 0 0 0Z"/>
               </svg>
               <span class="visually-hidden">
                 Избранное
               </span>
+              <span class="number-like">12</span>  
             </a>
           </li>
           <li class="navigation-item">
@@ -64,14 +65,18 @@
         <div class="inner-block">
           <header class="inner-header">
             <h1 class="inner-header-title">Гостиницы Седоны</h1>
-            <ul class="breadcrumbs">
+            <ul class="breadcrumbs-list">
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="index.html">
+                  <svg class="breadcrumbs-icon" aria-hidden="true" focusable="false" width="12" height="12" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6 .3 0 5.8V12h12V5.8L6 .3ZM11 11H1V6.2l5-4.5 5 4.5V11Z"/>
+                    <path d="M4 10h1V7.5h2V10h1V6.5H4V10Z"/>
+                  </svg>
                   <span class="visually-hidden">Главная</span>
                 </a>
               </li>
               <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link">Гостиницы</a>
+                <a class="breadcrumbs-link" href="#">Гостиницы</a>
               </li>
             </ul>
           </header>
@@ -193,7 +198,7 @@
                 <a class="button button--hotel-like" href="#">В избранное</a>
               </div>
               <div class="hotel-card-rating">
-                <!--div внутри которого img со звездами, в один ряд 4 звезды-->
+                <img class="hotel-card-stars" src="/images/stars4.svg">
                 <span class="rating-number">Рейтинг: 8,5</span>                       
               </div>
             </li>
@@ -210,8 +215,10 @@
                 <a class="button button--hotel-card" href="#">подробнее</a>
                 <a class="button button--hotel-like" href="#">В избранное</a>
               </div>
-              <!-- Рейтинг в звездах -->
-              <span class="rating-number">Рейтинг: 8,9</span>
+              <div class="hotel-card-rating">
+                <img class="hotel-card-stars" src="/images/stars3.svg">
+                <span class="rating-number">Рейтинг: 8,9</span>
+              </div>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
@@ -226,8 +233,10 @@
                 <a class="button button--hotel-card" href="#">подробнее</a>
                 <a class="button button--hotel-like button--hotel-like-in" href="#">В избранном</a>
               </div>
-              <!-- Рейтинг в звездах -->
-              <span class="rating-number">Рейтинг: 9,2</span>
+              <div class="hotel-card-rating">
+                <img class="hotel-card-stars" src="/images/stars2.svg">
+                <span class="rating-number">Рейтинг: 9,2</span>
+              </div>
             </li>              
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
@@ -242,8 +251,10 @@
                 <a class="button button--hotel-card" href="#">подробнее</a>
                 <a class="button button--hotel-like" href="#">В избранное</a>
               </div>
-              <!-- Рейтинг в звездах -->
-              <span class="rating-number">Рейтинг: 9,2</span>
+              <div class="hotel-card-rating">
+                <img class="hotel-card-stars" src="/images/stars2.svg">
+                <span class="rating-number">Рейтинг: 9,2</span>
+              </div>
             </li>
           </ul>
   
@@ -257,22 +268,22 @@
           <div class="pagination-container">
             <ul class="pagination-list">
               <li class="pagination-item">
-                <a class="pagination-link pagination-current">1</a>
+                <a class="pagination-link pagination-current" >1</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link">2</a>
+                <a class="pagination-link" href="#">2</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link">3</a>
+                <a class="pagination-link" href="#">3</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link">4</a>
+                <a class="pagination-link" href="#">4</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link">...</a>
+                <a class="pagination-link" href="#">...</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link pagination-last">10</a>
+                <a class="pagination-link pagination-last" href="#">10</a>
               </li>
             </ul>
             <span class="pagination-filter">Гостиниц на странице:</span>
